--- a/Visuals.ipynb
+++ b/Visuals.ipynb
@@ -33,7 +33,7 @@
     "from pickle import load\n",
     "import os\n",
     "\n",
-    "model_RF = load(open(\"RF_model.sav\", 'rb'))\n",
+    "model_RF = load(open(\"models/RF_model_20_80.sav\", 'rb'))\n",
     "\n",
     "\n",
     "features_json_file = \"all_features.json\"\n",
@@ -67,7 +67,7 @@
     "# tree\n",
     "from xgboost import plot_tree\n",
     "\n",
-    "model_file = \"RF_model.sav\"\n",
+    "model_file = \"models/RF_model_20_80.sav\"\n",
     "model = load(open(model_file, 'rb'))\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(60, 60))\n",
