--- a/visualize_transaction.ipynb
+++ b/visualize_transaction.ipynb
@@ -10,7 +10,7 @@
     "import networkx as nx\n",
     "from pickle import load\n",
     "\n",
-    "model_file = \"RF_model.sav\"\n",
+    "model_file = \"models/RF_model_20_80.sav\"\n",
     "scaler_file = \"scaler.pkl\"\n",
     "model_RF = load(open(model_file, 'rb'))\n",
     "scaler = load(open(scaler_file, 'rb'))\n",
