Refactor creating deanonimzed dataset

--- a/Visuals.ipynb
+++ b/Visuals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
     "#Imbalance\n",
     "import pandas as pd\n",
     "\n",
-    "df_ = pd.read_json('elliptic_txs_json.json')\n",
+    "df_ = pd.read_json('elliptic_txs.json')\n",
     "print(len(df_.loc[df_['elliptic_label'] == 2]))\n",
     "print(len(df_.loc[df_['elliptic_label'] == 1]))\n",
     "\n",
