--- a/flatten.ipynb
+++ b/flatten.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
     "from pandas.io.json import json_normalize\n",
     "from flatten_json import flatten\n",
     "\n",
-    "f = open('elliptic_txs_json.json')\n",
+    "f = open('elliptic_txs.json')\n",
     "data = json.load(f)\n",
     "flat_txs = []\n",
     "\n",
