Fix scaler data leak

--- a/src/scripts/shap_feature_analysis.ipynb
+++ b/src/scripts/shap_feature_analysis.ipynb
@@ -27,7 +27,7 @@
     "from xgboost import XGBClassifier\n",
     "from pickle import dump\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-    "from utils import logInfo\n",
+    "from utils import RANDOM_STATE, TRAIN_TEST_SPLIT, logInfo\n",
     "import shap\n",
     "\n",
     "script_dir = os.getcwd()\n",
@@ -51,12 +51,12 @@
     "X = df.drop(columns=[\"elliptic_label\"])  # delete unused\n",
     "y = df[\"elliptic_label\"]\n",
     "\n",
-    "train_test_ratio = f\"{int((1-0.3)*100)}-{int(0.3*100)}\"\n",
+    "train_test_ratio = f\"{int((1-TRAIN_TEST_SPLIT)*100)}-{int(TRAIN_TEST_SPLIT*100)}\"\n",
     "\n",
     "# legal = 2, illegal = 1\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.3, random_state=15\n",
+    "    X, y, test_size=TRAIN_TEST_SPLIT, random_state=RANDOM_STATE\n",
     ")\n",
     "\n",
     "# -----------------------------------------\n",
