--- a/src/scripts/Example.ipynb
+++ b/src/scripts/Example.ipynb
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,9 @@
     "# skiriam imti i testavimo ir treniravimo (x_train yra savybiu matrica, y_train yra klasiu masyvas, naudojami treniravimui)\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.30,random_state=15)\n",
+    "from scripts.utils import RANDOM_STATE, TRAIN_TEST_SPLIT\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=TRAIN_TEST_SPLIT,random_state=RANDOM_STATE)\n",
     "\n",
     "model_RF = RandomForestClassifier().fit(X_train.values,y_train.values)\n",
     "y_preds = model_RF.predict(X_test.values)\n",
