Tweak model hyperparameters

--- a/src/scripts/shap_feature_analysis.ipynb
+++ b/src/scripts/shap_feature_analysis.ipynb
@@ -2,31 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Linas.Pocius\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-23 20:19:52 [INFO]: Reading subset_normalized_json_file_with_scaler.json\n",
-      "2025-03-23 20:22:08 [INFO]: Removing features with all null values\n",
-      "2025-03-23 20:22:11 [INFO]: Training random forest\n"
+      "2025-04-06 09:59:48 [INFO]: Reading subset_normalized_json_file_with_scaler.json\n",
+      "2025-04-06 10:03:39 [INFO]: Removing features with all null values\n",
+      "2025-04-06 10:03:41 [INFO]: Training random forest\n"
      ]
     }
    ],
    "source": [
-    "import argparse\n",
     "import os\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from xgboost import XGBClassifier\n",
-    "from pickle import dump\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from utils import RANDOM_STATE, TRAIN_TEST_SPLIT, logInfo\n",
     "import shap\n",
     "\n",
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
